--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:44:00 AM</p>
+    <p class="lastupdate">09/13/2020 10:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.4&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.4&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.4&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.6&#176;F</td>
+        <td class="data">42.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.916 inHg (-0.001)</td>
+        <td class="data">29.913 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:55 AM">
-            66.4</span><br/>
+          <span title="10:48:21 AM">
+            67.0</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:43:55 AM (Sunday)">
-            66.4</span><br/>
+          <span title="10:48:21 AM (Sunday)">
+            67.0</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:55 AM" class="hival">
-            66.4</span>
+          <span title="10:48:21 AM" class="hival">
+            67.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:43:55 AM (Sunday)" class="hival">
-            66.4</span>
+          <span title="10:48:21 AM (Sunday)" class="hival">
+            67.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="10:40:59 AM">
-            42</span>
+          <span title="10:46:57 AM">
+            41</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="10:40:59 AM (Sunday)">
-            42</span>
+          <span title="10:46:57 AM (Sunday)">
+            41</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          215
+          211
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          215
+          211
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 19 hours, 57 minutes</td>
+      <td class="data">11 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 19 hours, 57 minutes</td>
+      <td class="data">11 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
