--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:19:00 AM</p>
+    <p class="lastupdate">09/13/2020 11:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.9&#176;F</td>
+        <td class="data">42.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">35%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.912 inHg (-0.009)</td>
+        <td class="data">29.911 inHg (-0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:57 AM">
-            71.2</span><br/>
+          <span title="11:23:13 AM">
+            71.9</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:18:57 AM (Sunday)">
-            71.2</span><br/>
+          <span title="11:23:13 AM (Sunday)">
+            71.9</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:57 AM" class="hival">
-            71.2</span>
+          <span title="11:23:13 AM" class="hival">
+            71.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:18:57 AM (Sunday)" class="hival">
-            71.2</span>
+          <span title="11:23:13 AM (Sunday)" class="hival">
+            71.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="11:11:43 AM">
-            36</span>
+          <span title="11:19:25 AM">
+            35</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="11:11:43 AM (Sunday)">
-            36</span>
+          <span title="11:19:25 AM (Sunday)">
+            35</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          199
+          196
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          199
+          196
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 20 hours, 32 minutes</td>
+      <td class="data">11 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 20 hours, 32 minutes</td>
+      <td class="data">11 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
