--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:49:00 AM</p>
+    <p class="lastupdate">09/13/2020 11:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">76.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">76.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">76.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.8&#176;F</td>
+        <td class="data">44.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.901 inHg (-0.020)</td>
+        <td class="data">29.898 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.5&#176;F</td>
+        <td class="data">73.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:51 AM">
-            74.9</span><br/>
+          <span title="11:53:47 AM">
+            76.2</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:48:51 AM (Sunday)">
-            74.9</span><br/>
+          <span title="11:53:47 AM (Sunday)">
+            76.2</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:51 AM" class="hival">
-            74.9</span>
+          <span title="11:53:47 AM" class="hival">
+            76.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:48:51 AM (Sunday)" class="hival">
-            74.9</span>
+          <span title="11:53:47 AM (Sunday)" class="hival">
+            76.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:19 AM">
-            44.5</span><br/>
+          <span title="11:52:25 AM">
+            44.7</span><br/>
           <span title="07:29:11 AM">
             37.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:48:19 AM (Sunday)">
-            44.5</span><br/>
+          <span title="11:52:25 AM (Sunday)">
+            44.7</span><br/>
           <span title="07:29:11 AM (Sunday)">
             37.9</span>
         </td>
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="11:32:13 AM">
-            33</span>
+          <span title="11:52:43 AM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="11:32:13 AM (Sunday)">
-            33</span>
+          <span title="11:52:43 AM (Sunday)">
+            32</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          193
+          190
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          193
+          190
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 21 hours, 2 minutes</td>
+      <td class="data">11 days, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 21 hours, 2 minutes</td>
+      <td class="data">11 days, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
